--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "diamond_admin_portal",
+  "name": "image_cropper",
   "author": "github.com/abdulwaqar844",
   "version": "1.0.0",
   "description": "Javascript Version",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"},
+    "build": "react-scripts build"
+  },
   "eslintConfig": {
     "extends": [
       "react-app"
@@ -29,14 +30,9 @@
     "@mui/material": "^5.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-   
     "react-dom": "^18.2.0",
-   
     "react-image-crop": "^11.0.7",
-   
-    "react-scripts": "^5.0.0",
-  "web-vitals": "^3.1.1"
-   
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
