--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "image_cropper",
+  "name": "react-mui-image-cropper",
   "author": "github.com/abdulwaqar844",
   "version": "1.0.0",
   "description": "Javascript Version",
